--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
                 /
             </td>
         </tr>
+        <tr>
+            <td class='digit_key dot'>
+                .
+            </td>
+        </tr>
 
     </table>
     <script src="/scripts/main.js"></script>
